FIX - #60: Change div under hero image to Dark blue     - Gap after banner

--- a/src/main/webapp/resources/css/savie-regular-styles.css
+++ b/src/main/webapp/resources/css/savie-regular-styles.css
@@ -5178,3 +5178,7 @@ header .navbar-menu.teaser-header .header-menu li.active .orange-header-menu, he
     border: solid 1px #ff8200 !important;
     color: #ff8200 !important;
 }
+
+#o2o-landing-form {
+	margin: 0;
+}
